fix(FEC-8890): captions menu was not aligned correct in ie11 with bootstrap.css

--- a/src/styles/_shell.scss
+++ b/src/styles/_shell.scss
@@ -34,7 +34,7 @@
     font-family: $font-family;
 
     label {
-      margin-bottom: initial;
+      margin-bottom: auto;
     }
 
     input,
